devops/cicd/kubernetes/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: jenkins.cicd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
